# Gov-Intern-Finder

./: .replit  Procfile  README.md  pyproject.toml  replit.md  requirements.py  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
attached_assets/: Pasted-ADDITIONAL-MANDATORY-REQUIREMENTS-IMPORTANT-The-uploade_1780644424502.txt  Pasted-PROJECT-AI-Based-Government-Internship-Recommendation-a_1780644404137.txt  india_gov_internship_sources_1780644516463.csv  internship_(2)_1780644805534.csv  ncs.gov_1780644437023.csv  pminternship_(1)_1780644467475.csv
gov_internship/: app.py
gov_internship/data/: final_government_internships.csv  scraped_internships.csv
gov_internship/db/: internships.db
gov_internship/modules/: data_cleaner.py  database.py  recommendation.py  scraper.py
gov_internship/static/css/: style.css
gov_internship/static/js/: main.js
gov_internship/templates/: admin.html  base.html  index.html  internship_detail.html  recommend.html  search.html
