[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "werkzeug>=3.1.8",
]
